myplan auto dialog style

--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -294,7 +294,7 @@
   "RequiredPlanName": "プラン名を入力してください。",
   "InplanCount": "プランに入れた人",
   "ReviewRate": "レビュー",
-  "AutoSearchConfirmTitle": "最短ルートを検索します。よろしいですか？",
+  "AutoSearchConfirmTitle": "最短ルートを検索します。",
   "AutoSearchConfirmText": "<dl class='route'><dt>出発地</dt><dd>{0}</dd><dt>到着地</dt><dd>{1}</dd></dl>",
   "ErrorMsgAuto": "最短ルートの検索には4スポット以上必要です。",
   "Optimized": "最適化済です。",
