--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -329,5 +329,7 @@
   "ErrorMsgSetTransferEkitan": "1つのプランに保存できるスポット数は、公共交通機関の場合、最大8スポットです。(出発地・到着地を含む)",
   "ReleaseDestination": "共有先",
   "ErrorMsgNoSpot": "スポットを追加してください。",
-  "CopyPlan": "プランコピー"
+  "CopyPlan": "プランコピー",
+  "Reply": "返信",
+  "EditCancel": "キャンセル"
 }
