REMOJU-499 中井さんチェック　文言修正

--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -83,7 +83,7 @@
   "Save": "保存",
   "AddSpot": "スポットを追加する",
   "BatchClear": "破棄",
-  "ErrorMsgRequiredPlanName": "保存には、プラン名が必要です。プラン名を入力してください。",
+  "ErrorMsgRequiredPlanName": "保存にはプラン名が必要です。プラン名を入力してください。",
   "Copy": "リンクのコピー",
   "Access": "アクセス",
   "DirectionsFromCurrentLocation": "現在地からの行き方",
@@ -224,7 +224,7 @@
   "VideoSizeError": "100MBを超える動画ファイルはアップロードできません。",
   "FreeMemoEx": "みんなに向けたメッセージ",
   "MakeMyPlan": "旅プランを作る",
-  "ArragePlan": "プラン箱",
+  "ArragePlan": "計画中のプラン",
   "SetDeparturePoint": "出発地の設定",
   "SetDestination": "到着地の設定",
   "PointOfDeparture": "出発地",
@@ -260,7 +260,7 @@
   "EdifPlanComment": "編集中の内容を",
   "CreatePlanComment": "作成中のプランを",
   "Set": "設定",
-  "GoogleKeyword": "住所や地名で指定してください。",
+  "GoogleKeyword": "住所や地名を入力してください。",
   "StartSearch": "出発地を設定",
   "EndSearch": "到着地を設定",
   "MyPlan#Sec1": "みんなのベストな旅を参考に、",
@@ -290,7 +290,7 @@
   "NearestSt": "最寄駅",
   "SearchGuide": "「東京タワー」「インスタ映え」...",
   "CreateNew": "新規作成する",
-  "LoginConfirmTitle": "プランの保存には、ログインが必要です。ログイン画面(ユーザ登録画面)に移動しますか？",
+  "LoginConfirmTitle": "保存にはログインが必要です。ログイン画面 又は ユーザー登録画面に移動しますか？",
   "RequiredPlanName": "プラン名を入力してください。",
   "InplanCount": "プランに入れた人",
   "ReviewRate": "レビュー",
@@ -331,5 +331,7 @@
   "ErrorMsgNoSpot": "スポットを追加してください。",
   "CopyPlan": "プランコピー",
   "Reply": "返信",
-  "EditCancel": "キャンセル"
+  "EditCancel": "キャンセル",
+  "StartEx": "自宅など出発地を設定すると、1つ目のスポットまでの経路も表示されます。",
+  "EndEx": "自宅など到着地を設定すると、最後のスポットからの経路も表示されます。"
 }
