--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -290,7 +290,7 @@
   "NearestSt": "最寄駅",
   "SearchGuide": "「温泉」「京都女子旅」...",
   "CreateNew": "新規作成する",
-  "LoginConfirmTitle": "プランの保存には、ログインが必要です。ログイン画面(ユーザ登録画面)に移動しますか？",
+  "LoginConfirmTitle": "保存にはログインが必要です。ログイン画面 又は ユーザー登録画面に移動しますか？",
   "RequiredPlanName": "Please enter the title.",
   "InplanCount":"プランに入れた人",
   "ReviewRate":"レビュー評価",
@@ -331,5 +331,7 @@
   "ErrorMsgNoSpot": "スポットを追加してください。",
   "CopyPlan": "プランコピー",
   "Reply": "返信",
-  "EditCancel": "キャンセル"
+  "EditCancel": "キャンセル",
+  "StartEx": "自宅など出発地を設定すると、1つ目のスポットまでの経路も表示されます。",
+  "EndEx": "自宅など到着地を設定すると、最後のスポットからの経路も表示されます。"
 }
