--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -333,5 +333,6 @@
   "Reply": "返信",
   "EditCancel": "キャンセル",
   "StartEx": "自宅など出発地を設定すると、1つ目のスポットまでの経路も表示されます。",
-  "EndEx": "自宅など到着地を設定すると、最後のスポットからの経路も表示されます。"
+  "EndEx": "自宅など到着地を設定すると、最後のスポットからの経路も表示されます。",
+  "LinktoDetail":"詳細を見る"
 }
