--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -45,7 +45,7 @@
   "UserSubmissionPlan": "みんなのプラン",
   "FindEveryoneRecommendations": "ベストな旅を探す、作る",
   "BackEveryoneRecommendations": "一覧へ戻る",
-  "EditPlan": "プラン編集",
+  "EditPlan": "編集",
   "DeletePlan": "削除する",
   "Application": "公開申請中",
   "Spot": "スポット",
@@ -174,19 +174,19 @@
   "EditProfile": "プロフィールを編集する",
   "Logout": "ログアウト",
   "DeleteAllCurrentSpots": "現在のスポットを全て削除します",
-  "CreatingNewPlan": "新規プラン",
+  "CreatingNewPlan": "新規作成",
   "SpotBrowsingHistory": "最近見たスポット",
   "PlanBrowsingHistory": "最近見たプラン",
   "station": "駅",
   "EndTime": "終了時間",
-  "Preview": "プレビュー表示",
+  "Preview": "表示",
   "EndOfPublication": "掲載終了",
   "ShowRoute": "経路を表示",
-  "EditPlanConfirmTitle": "このプランを編集しますか？（未保存のプランがあります。）",
-  "EditPlanConfirmText": "「はい」を選択した場合、未保存の編集内容は削除されます。",
+  "EditPlanConfirmTitle": "未保存のプランがあります。",
+  "EditPlanConfirmText": "はいを選択した場合、未保存の編集内容は削除され、選択したプランの編集が開始されます。",
   "Close": "閉じる",
   "Open": "広げる",
-  "PlanSavedConfirmTitle": "プランをマイページに保存しました。",
+  "PlanSavedConfirmTitle": "プランを、マイページに保存しました。",
   "PlanSavedConfirmButton": "マイプラン一覧へ",
   "PlanClearConfirm": "このプランを本当に破棄しますか？",
   "ShareYourOwnTrip": "自分だけの旅をシェアしよう",
@@ -327,12 +327,13 @@
   "SpotOverview": "スポット概要",
   "ErrorMsgSetTransferCar": "1つのプランに保存できるスポット数は、車の場合、最大10スポットです。(出発地・到着地を含む)",
   "ErrorMsgSetTransferEkitan": "1つのプランに保存できるスポット数は、公共交通機関の場合、最大8スポットです。(出発地・到着地を含む)",
-  "ReleaseDestination": "共有先",
+  "ReleaseDestination": "公開先",
   "ErrorMsgNoSpot": "スポットを追加してください。",
-  "CopyPlan": "プランコピー",
+  "CopyPlan": "コピー",
   "Reply": "返信",
   "EditCancel": "キャンセル",
   "StartEx": "自宅など出発地を設定すると、1つ目のスポットまでの経路も表示されます。",
   "EndEx": "自宅など到着地を設定すると、最後のスポットからの経路も表示されます。",
-  "LinktoDetail":"詳細を見る"
+  "LinktoDetail":"詳細を見る",
+  "EditPlanRemoveConfirm": "編集中のプランも削除されます。よろしいですか？"
 }
