--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -335,5 +335,8 @@
   "StartEx": "自宅など出発地を設定すると、1つ目のスポットまでの経路も表示されます。",
   "EndEx": "自宅など到着地を設定すると、最後のスポットからの経路も表示されます。",
   "LinktoDetail":"詳細を見る",
-  "EditPlanRemoveConfirm": "編集中のプランも削除されます。よろしいですか？"
+  "EditPlanRemoveConfirm": "編集中のプランも削除されます。よろしいですか？",
+  "About":"アバウト",
+  "Guide":"ガイド",
+  "Policy":"プライバシー"
 }
