--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -254,7 +254,7 @@
   "ReportReviewConfirmText": "ご報告いただいたレビューについて、担当者が数営業日以内に確認します。",
   "ReportReviewComplete": "ご報告いただきましてありがとうございました。",
   "ReportedReviewComplete": "報告済みです。ありがとうございました。",
-  "NewPlanConfirmTitle": "新規にプランを作成しますか？",
+  "NewPlanConfirmTitle": "新しくプランを作りしますか？",
   "NewPlanConfirmText": "作成中の内容は削除されます。",
   "ResetPlanConfirm": "最近の変更が失われます。よろしいですか？",
   "EdifPlanComment": "編集中の内容を",
