--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -74,7 +74,7 @@
   "Auto": "最短ルート",
   "EnterPlanName": "保存するプラン名を入力",
   "SpotDeleted": "スポットを削除しました。",
-  "StartTime": "出発時間",
+  "StartTime": "スタート時間",
   "Memo": "みんなへのメッセージ",
   "ShareUrl": "共有URL",
   "SavePlan": "プランを保存",
