--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -57,7 +57,7 @@
   "SpotList": "スポット一覧",
   "PlanList": "プラン一覧",
   "AreaFeature": "エリア特集記事一覧",
-  "Review": "レビュー投稿",
+  "Review": "コメント",
   "BasicInfomation": "基本情報",
   "MoreInformation": "詳細情報",
   "NearbySpots": "近くにあるおすすめスポット",
@@ -213,7 +213,7 @@
   "ReviewPosted": "投稿する",
   "Posted": "投稿",
   "TitleEx": "タイトルを入力してください。",
-  "contentsEx": "本文を入力してください。",
+  "contentsEx": "コメントを入力してください。",
   "PlanDetail": "プラン詳細",
   "PlanTime": "プラン時間",
   "Age": "代",
