--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -206,7 +206,7 @@
   "NoSpotName": "保存にはスポット名が必要です。スポット名を入力してください。",
   "NoSpot": "住所を直接入力する",
   "RegisterSpot": "スポットを登録",
-  "NoReview": "まだレビューがありません。",
+  "NoReview": "まだコメントがありません。",
   "VisitDate": "訪問日",
   "PostedDate": "投稿日",
   "ReviewPostAgree": "レビュー投稿ご利用規約に同意する。",
