REMOJU-518 各詳細　いいね、コメントの件数を返す

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -284,7 +284,7 @@
   "isSave":"保存する",
   "ViewUserPost":"この投稿者の投稿一覧へ",
   "ViewReview":"View my review",
-  "NoReviewMsg":"投稿中のレビューはありません",
+  "NoReviewMsg":"投稿中のコメントはありません",
   "NoPlanMsg":"作成中のプランはありません",
   "LogoutConfirmTitle": "ログアウトしますか？(未保存のプランがあります)",
   "LogoutConfirmText": "「はい」を選択した場合、未保存の編集内容は削除されます。",
