--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -218,7 +218,7 @@
   "PlanTime": "プラン時間",
   "Age": "代",
   "PostersProfile": "投稿者のプロフィール",
-  "ReviewMore": "全##件のレビューをみる",
+  "ReviewMore": "全##件のコメントをみる",
   "RevireAlsoMore": "さらにみる",
   "Continue": "続きを見る",
   "VideoSizeError": "100MBを超える動画ファイルはアップロードできません。",
@@ -232,10 +232,10 @@
   "Remove": "削除",
   "SpotStart": "を出発",
   "SpotEnd": "に到着",
-  "ReviewSaved": "レビューを投稿しました。",
+  "ReviewSaved": "コメントを投稿しました。",
   "PlanRemoveConfirm": "プランを削除しますか？",
-  "ReviewRemoveConfirm": "レビューを削除しますか？",
-  "ReviewRemoved": "レビューを削除しました。",
+  "ReviewRemoveConfirm": "コメントを削除しますか？",
+  "ReviewRemoved": "コメントを削除しました。",
   "SelectRating": "評価1～5を選択してください。",
   "SelectAPhotoReview": "写真を選択しよう",
   "ReleaseConfirm": "みんなに公開しますか？",
@@ -250,9 +250,9 @@
   "FavoriteRemoved": "お気に入りを削除しました。",
   "PlanName": "プラン名を入力しよう",
   "MyplanSelectPhoto": "写真選択",
-  "ReportReview": "レビューを違反報告",
-  "ReportReviewConfirmTitle": "不適切なレビューを報告しますか？",
-  "ReportReviewConfirmText": "ご報告いただいたレビューについて、担当者が数営業日以内に確認します。",
+  "ReportReview": "コメントを違反報告",
+  "ReportReviewConfirmTitle": "不適切なコメントを報告しますか？",
+  "ReportReviewConfirmText": "ご報告いただいたコメントについて、担当者が数営業日以内に確認します。",
   "ReportReviewComplete": "ご報告いただきましてありがとうございました。",
   "ReportedReviewComplete": "報告済みです。ありがとうございました。",
   "NewPlanConfirmTitle": "新しくプランを作りしますか？",
@@ -283,8 +283,8 @@
   "isEdit": "編集する",
   "isSave": "保存する",
   "ViewUserPost": "この投稿者の投稿一覧へ",
-  "ViewReview": "投稿したレビューを見る",
-  "NoReviewMsg": "投稿中のレビューはありません",
+  "ViewReview": "投稿したコメントを見る",
+  "NoReviewMsg": "投稿中のコメントはありません",
   "NoPlanMsg": "作成中のプランはありません",
   "LogoutConfirmTitle": "ログアウトしますか？(未保存のプランがあります)",
   "LogoutConfirmText": "「はい」を選択した場合、未保存の編集内容は削除されます。",
