REMOJU-537 中井さん　辞書変更

--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -43,7 +43,7 @@
   "TimeRequired": "所要時間",
   "RemojuRecommended": "モデルプラン",
   "UserSubmissionPlan": "みんなのプラン",
-  "FindEveryoneRecommendations": "ベストな旅を探す、作る",
+  "FindEveryoneRecommendations": "おすすめの旅プランを探す、作る",
   "BackEveryoneRecommendations": "一覧へ戻る",
   "EditPlan": "編集",
   "DeletePlan": "削除する",
@@ -52,7 +52,7 @@
   "Plan": "旅プラン",
   "Date": "日付",
   "LastUpdated": "最終更新日",
-  "ConfirmPlanDeletion": "プランを削除してよろしいでしょうか？",
+  "ConfirmPlanDeletion": "プランを削除しますか？",
   "PlanDeleted": "プランを削除しました。",
   "SpotList": "スポット一覧",
   "PlanList": "プラン一覧",
@@ -83,7 +83,7 @@
   "Save": "保存",
   "AddSpot": "スポットを追加する",
   "BatchClear": "破棄",
-  "ErrorMsgRequiredPlanName": "保存にはプラン名が必要です。プラン名を入力してください。",
+  "ErrorMsgRequiredPlanName": "保存にはプラン名（必須）が必要です。プラン名を入力してください。",
   "Copy": "リンクのコピー",
   "Access": "アクセス",
   "DirectionsFromCurrentLocation": "現在地からの行き方",
@@ -182,8 +182,8 @@
   "Preview": "表示",
   "EndOfPublication": "掲載終了",
   "ShowRoute": "経路を表示",
-  "EditPlanConfirmTitle": "未保存のプランがあります。",
-  "EditPlanConfirmText": "はいを選択した場合、未保存の編集内容は削除され、選択したプランの編集が開始されます。",
+  "EditPlanConfirmTitle": "未保存のプランがあります",
+  "EditPlanConfirmText": "他のプランが編集中です。「はい」を選択した場合は、他の未保存の編集内容は削除され、選択したプランの編集が開始されます。",
   "Close": "閉じる",
   "Open": "広げる",
   "PlanSavedConfirmTitle": "プランを、マイページに保存しました。",
@@ -249,15 +249,15 @@
   "SpotExplanationEx": "このスポットのポイントや内容を書きましょう（フリーコメント）",
   "FavoriteRemoveConfirm": "お気に入りから削除しますか？",
   "FavoriteRemoved": "お気に入りを削除しました。",
-  "PlanName": "プラン名を入力しよう",
+  "PlanName": "プラン名の入力（必須）",
   "MyplanSelectPhoto": "写真選択",
   "ReportReview": "コメントを違反報告",
   "ReportReviewConfirmTitle": "不適切なコメントを報告しますか？",
   "ReportReviewConfirmText": "ご報告いただいたコメントについて、担当者が数営業日以内に確認します。",
   "ReportReviewComplete": "ご報告いただきましてありがとうございました。",
   "ReportedReviewComplete": "報告済みです。ありがとうございました。",
-  "NewPlanConfirmTitle": "新しくプランを作りしますか？",
-  "NewPlanConfirmText": "作成中の内容は削除されます。",
+  "NewPlanConfirmTitle": "新しいプランを作りますか？",
+  "NewPlanConfirmText": "作成中の内容は削除され、新規プランの作成が始まります。",
   "ResetPlanConfirm": "最近の変更が失われます。よろしいですか？",
   "EdifPlanComment": "編集中の内容を",
   "CreatePlanComment": "作成中のプランを",
@@ -296,9 +296,9 @@
   "RequiredPlanName": "プラン名を入力してください。",
   "InplanCount": "プランに入れた人",
   "ReviewRate": "レビュー",
-  "AutoSearchConfirmTitle": "最短ルートを検索します。",
+  "AutoSearchConfirmTitle": "最短ルートを検索します",
   "AutoSearchConfirmText": "<dl class='route'><dt>出発地</dt><dd>{0}</dd><dt>到着地</dt><dd>{1}</dd></dl>",
-  "ErrorMsgAuto": "最短ルートの検索には4スポット以上必要です。",
+  "ErrorMsgAuto": "出発地と到着地がセットされたプランでは、2つ以上のスポットが含まれる場合、出発地と到着地の間を最短で周る経路を自動検索することができます。",
   "Optimized": "最適化済です。",
   "AgeAnnounced": "年代は公表されます。",
   "SetBirthday": "設定は編集の生年月日で行います。",
@@ -321,7 +321,7 @@
   "NotPostedRemoju": "Remojuではまだ掲載されていないスポットです。Googleから場所を取得しています。",
   "PostList": "さんの投稿一覧",
   "ShareLink": "リンク共有",
-  "ShareLinkPlanContents": "このリンクを知っているユーザーとは、このプランの内容を共有できます。",
+  "ShareLinkPlanContents": "このリンクを知っているユーザーとは、このプランを共有できます。",
   "LoginMessage": "ログインしました",
   "PictureMemo": "写真のコメント",
   "Hedtitle": "はじめての方へ",
