--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -44,7 +44,7 @@
   "RemojuRecommended": "モデルプラン",
   "UserSubmissionPlan": "みんなのプラン",
   "FindEveryoneRecommendations": "ベストな旅を探す、作る",
-  "BackEveryoneRecommendations": "一覧へ戻る",
+  "BackEveryoneRecommendations": "一覧",
   "EditPlan": "編集",
   "DeletePlan": "削除する",
   "Application": "公開申請中",
