REMOJU-537 中井さん　辞書変更

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -44,7 +44,8 @@
   "RemojuRecommended": "Remoju plans",
   "UserSubmissionPlan": "User plans",
   "FindEveryoneRecommendations": "Find everyone recommendations.",
-  "BackEveryoneRecommendations": "みんなのおすすめへ戻る",
+  "BackEveryoneRecommendations": "一覧へ戻る",
+  "BackEveryoneRecommendationsMyPage": "一覧",
   "EditPlan": "Edit",
   "DeletePlan": "Delete",
   "Application": "Pending",
@@ -75,7 +76,7 @@
   "EnterPlanName": "Enter the plan title to save.",
   "SpotDeleted": "The spot has been deleted.",
   "StartTime": "Departure",
-  "Memo": "みんなへのメッセージ",
+  "Memo": "フリーメッセージ",
   "ShareUrl": "Shared url",
   "SavePlan": "Save plan",
   "OK": "OK",
@@ -126,7 +127,7 @@
   "editCoverImage": "Edit cover photo",
   "Article": "Written by",
   "RecommendedPlanwithSpot": " Related plan",
-  "NumberOfSpots": "My Spots",
+  "NumberOfSpots": "含まれるスポット数",
   "ErrorMsgAddSpot": "1つのプランに追加できるスポット数は最大20スポットです。(出発地・到着地を含む)",
   "SearchByKeyword": "Enter the keyward",
   "AreaAndCommitment": "Area・Preferences",
@@ -141,7 +142,7 @@
   "ShareThisPlan": "Share this plan",
   "FeaturesOfThisPlan": "Detail of this plan",
   "RecommendedSpotsInTheSameArea": "Recommended spots in the same area",
-  "FeaturedLink": "Special features",
+  "FeaturedLink": "このエリアのおすすめ特集",
   "SharePlan": "Share plan",
   "SharePlanSave": "*This URL shows saved plans. If you want to share this plan being edited, please save the plan once.",
   "SharePlanNoSave": "Save your plan and share it with this URL.",
@@ -190,7 +191,7 @@
   "PlanSavedConfirmButton": "マイプラン一覧へ",
   "PlanClearConfirm": "Are you sure to discard this plan?",
   "ShareYourOwnTrip": "Share your trip",
-  "startTimeEx": "00:00",
+  "startTimeEx": "0:00",
   "EnterThePlanName": "Enter the plan title (up to 20 characters)",
   "PlanNameEx": "Enter the plan title",
   "PlanExplanationEx": "プランのポイントや内容を書こう",
@@ -225,9 +226,9 @@
   "VideoSizeError": "Video files larger than 100MB cannot be uploaded.",
   "FreeMemoEx": "Message for everyone",
   "MakeMyPlan": "Make my plan",
-  "ArragePlan": "プランを作成しよう",
-  "SetDeparturePoint": "Origin",
-  "SetDestination": "Destination",
+  "ArragePlan": "プラン作成画面",
+  "SetDeparturePoint": "出発地のセット",
+  "SetDestination": "到着地のセット",
   "PointOfDeparture": "Point of departure",
   "ArrivalPlace": "Arrival place",
   "Remove": "Remove",
@@ -262,7 +263,7 @@
   "EdifPlanComment": "Editting",
   "CreatePlanComment": "Editting",
   "Set": "Setting",
-  "GoogleKeyword": "Going to",
+  "GoogleKeyword": "住所やスポット名を入力してください",
   "StartSearch": "Origin",
   "EndSearch": "Destination",
   "MyPlan#Sec1":"Click",
@@ -283,7 +284,7 @@
   "SavePlanConfirm": "プランを保存します。よろしいですか？",
   "isEdit":"編集する",
   "isSave":"保存する",
-  "ViewUserPost":"この投稿者の投稿一覧へ",
+  "ViewUserPost": "この投稿者の他も見てみる",
   "ViewReview":"View my review",
   "NoReviewMsg":"投稿中のコメントはありません",
   "NoPlanMsg":"作成中のプランはありません",
@@ -309,10 +310,10 @@
   "NotFound" : "お探しのページは見つかりませんでした。",
   "ToTopPage": "トップページへ戻る",
   "SpotsVisited": "周遊スポット",
-  "NotFindRecommendations": "みんなのおすすめは、見つかりませんでした。",
+  "NotFindRecommendations": "関連する おすすめ は、まだありませんでした。",
   "Instead": "代わりに",
   "GoogleSearch": "Google検索",
-  "SearchSpot": "でスポットを検索できます。",
+  "SearchSpot": "からヒットしたものを表示しています。",
   "GoogleSearchAny": "Googleで任意のスポットを検索できます。",
   "ReplaceKeyword": "キーワードを入れ替えて検索してください。",
   "includedPlan": "（これらのスポットもプランに入れることができます。）",
@@ -334,8 +335,8 @@
   "CopyPlan": "プランコピー",
   "Reply": "返信",
   "EditCancel": "キャンセル",
-  "StartEx": "自宅など出発地を設定すると、1つ目のスポットまでの経路も表示されます。",
-  "EndEx": "自宅など到着地を設定すると、最後のスポットからの経路も表示されます。",
+  "StartEx": "自宅や集合場所など、出発地をセットすると、[出発地] → [ 1つ目のスポット] までの経路が表示されます。",
+  "EndEx": "自宅や到着場所など、出発地をセットすると、[最後のスポット] → [到着地] までの経路が表示されます。",
   "LinktoDetail":"詳細を見る",
   "EditPlanRemoveConfirm": "編集中のプランも削除されます。よろしいですか？",
   "About":"アバウト",
