--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -43,8 +43,9 @@
   "TimeRequired": "所要時間",
   "RemojuRecommended": "モデルプラン",
   "UserSubmissionPlan": "みんなのプラン",
-  "FindEveryoneRecommendations": "おすすめの旅プランを探す、作る",
-  "BackEveryoneRecommendations": "一覧",
+  "FindEveryoneRecommendations": "旅プランを探す、作る",
+  "BackEveryoneRecommendations": "一覧へ戻る",
+  "BackEveryoneRecommendationsMyPage": "一覧",
   "EditPlan": "編集",
   "DeletePlan": "削除する",
   "Application": "公開申請中",
@@ -74,8 +75,8 @@
   "Auto": "最短ルート",
   "EnterPlanName": "保存するプラン名を入力",
   "SpotDeleted": "スポットを削除しました。",
-  "StartTime": "スタート時間",
-  "Memo": "みんなへのメッセージ",
+  "StartTime": "出発時間",
+  "Memo": "フリーメッセージ",
   "ShareUrl": "共有URL",
   "SavePlan": "プランを保存",
   "OK": "はい",
@@ -126,7 +127,7 @@
   "editCoverImage": "カバー写真を変更",
   "Article": "投稿者のプロフィール",
   "RecommendedPlanwithSpot": "このスポットを含むおすすめプラン",
-  "NumberOfSpots": "巡ったスポット",
+  "NumberOfSpots": "含まれるスポット数",
   "ErrorMsgAddSpot": "1つのプランに追加できるスポット数は最大20スポットです。(出発地・到着地を含む)",
   "SearchByKeyword": "キーワード検索",
   "AreaAndCommitment": "エリア・カテゴリー選択",
@@ -141,7 +142,7 @@
   "ShareThisPlan": "このプランを共有する",
   "FeaturesOfThisPlan": "プランの特徴",
   "RecommendedSpotsInTheSameArea": "近くのおすすめスポット",
-  "FeaturedLink": "同じエリアのおすすめ特集",
+  "FeaturedLink": "このエリアのおすすめ特集",
   "SharePlan": "リンク共有",
   "SharePlanSave": "このURLは、みんなに非公開のまま、共有したお友達のみ閲覧できます。",
   "SharePlanNoSave": "このプランをURLで共有するには、編集画面から保存してください。このURLは、みんなに非公開のまま、共有したお友達のみ閲覧できます。",
@@ -190,7 +191,7 @@
   "PlanSavedConfirmButton": "マイプラン一覧へ",
   "PlanClearConfirm": "このプランを本当に破棄しますか？",
   "ShareYourOwnTrip": "自分だけの旅をシェアしよう",
-  "startTimeEx": "00:00",
+  "startTimeEx": "0:00",
   "EnterThePlanName": "プラン名を入れよう（最大20文字）",
   "PlanNameEx": "（例）海のきれいな街で日帰り女子旅♡",
   "PlanExplanationEx": "プランのポイントや内容を書こう",
@@ -225,9 +226,9 @@
   "VideoSizeError": "100MBを超える動画ファイルはアップロードできません。",
   "FreeMemoEx": "みんなに向けたメッセージ",
   "MakeMyPlan": "旅プランを作る",
-  "ArragePlan": "計画中のプラン",
-  "SetDeparturePoint": "出発地の設定",
-  "SetDestination": "到着地の設定",
+  "ArragePlan": "プラン作成画面",
+  "SetDeparturePoint": "出発地のセット",
+  "SetDestination": "到着地のセット",
   "PointOfDeparture": "出発地",
   "ArrivalPlace": "到着地",
   "Remove": "削除",
@@ -262,7 +263,7 @@
   "EdifPlanComment": "編集中の内容を",
   "CreatePlanComment": "作成中のプランを",
   "Set": "設定",
-  "GoogleKeyword": "住所や地名を入力してください。",
+  "GoogleKeyword": "住所やスポット名を入力してください",
   "StartSearch": "出発地を設定",
   "EndSearch": "到着地を設定",
   "MyPlan#Sec1": "みんなのベストな旅を参考に、",
@@ -283,7 +284,7 @@
   "SavePlanConfirm": "プランを保存します。よろしいですか？",
   "isEdit": "編集する",
   "isSave": "保存する",
-  "ViewUserPost": "この投稿者の投稿一覧へ",
+  "ViewUserPost": "この投稿者の他も見てみる",
   "ViewReview": "投稿したコメントを見る",
   "NoReviewMsg": "投稿中のコメントはありません",
   "NoPlanMsg": "作成中のプランはありません",
@@ -309,10 +310,10 @@
   "NotFound": "お探しのページは見つかりませんでした。",
   "ToTopPage": "トップページへ戻る",
   "SpotsVisited": "周遊スポット",
-  "NotFindRecommendations": "みんなのおすすめは、見つかりませんでした。",
+  "NotFindRecommendations": "関連する おすすめ は、まだありませんでした。",
   "Instead": "代わりに",
   "GoogleSearch": "Google検索",
-  "SearchSpot": "でスポットを検索できます。",
+  "SearchSpot": "からヒットしたものを表示しています。",
   "GoogleSearchAny": "Googleで任意のスポットを検索できます。",
   "ReplaceKeyword": "キーワードを入れ替えて検索してください。",
   "includedPlan": "（これらのスポットもプランに入れることができます。）",
@@ -325,7 +326,7 @@
   "LoginMessage": "ログインしました",
   "PictureMemo": "写真のコメント",
   "Hedtitle": "はじめての方へ",
-  "WhereToLook": "探す先",
+  "WhereToLook": "絞り込み",
   "SpotOverview": "スポット概要",
   "ErrorMsgSetTransferCar": "1つのプランに保存できるスポット数は、車の場合、最大10スポットです。(出発地・到着地を含む)",
   "ErrorMsgSetTransferEkitan": "1つのプランに保存できるスポット数は、公共交通機関の場合、最大8スポットです。(出発地・到着地を含む)",
@@ -334,8 +335,8 @@
   "CopyPlan": "コピー",
   "Reply": "返信",
   "EditCancel": "キャンセル",
-  "StartEx": "自宅など出発地を設定すると、1つ目のスポットまでの経路も表示されます。",
-  "EndEx": "自宅など到着地を設定すると、最後のスポットからの経路も表示されます。",
+  "StartEx": "自宅や集合場所など、出発地をセットすると、[出発地] → [ 1つ目のスポット] までの経路が表示されます。",
+  "EndEx": "自宅や到着場所など、出発地をセットすると、[最後のスポット] → [到着地] までの経路が表示されます。",
   "LinktoDetail":"詳細を見る",
   "EditPlanRemoveConfirm": "編集中のプランも削除されます。よろしいですか？",
   "About":"アバウト",
