REMOJU-537 中井さん　辞書変更

--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -293,7 +293,8 @@
   "NearestSt": "最寄駅",
   "SearchGuide": "「東京タワー」「インスタ映え」...",
   "CreateNew": "新規作成する",
-  "LoginConfirmTitle": "保存にはログインが必要です。ログイン画面 又は ユーザー登録画面に移動しますか？",
+  "LoginConfirmTitle": "保存にはログインが必要です。",
+  "LoginConfirmText": "ログイン画面 又は ユーザー登録画面に移動しますか？",
   "RequiredPlanName": "プラン名を入力してください。",
   "InplanCount": "プランに入れた人",
   "ReviewRate": "レビュー",
