--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -293,7 +293,8 @@
   "NearestSt": "最寄駅",
   "SearchGuide": "「温泉」「京都女子旅」...",
   "CreateNew": "新規作成する",
-  "LoginConfirmTitle": "保存にはログインが必要です。ログイン画面 又は ユーザー登録画面に移動しますか？",
+  "LoginConfirmTitle": "保存にはログインが必要です。",
+  "LoginConfirmText": "ログイン画面 又は ユーザー登録画面に移動しますか？",
   "RequiredPlanName": "Please enter the title.",
   "InplanCount":"プランに入れた人",
   "ReviewRate":"レビュー評価",
