REMOJU-543 中井さん要望　マイページ

--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -53,7 +53,6 @@
   "Plan": "旅プラン",
   "Date": "日付",
   "LastUpdated": "最終更新日",
-  "ConfirmPlanDeletion": "プランを削除しますか？",
   "PlanDeleted": "プランを削除しました。",
   "SpotList": "スポット一覧",
   "PlanList": "プラン一覧",
@@ -235,7 +234,8 @@
   "SpotStart": "を出発",
   "SpotEnd": "に到着",
   "ReviewSaved": "コメントを投稿しました。",
-  "PlanRemoveConfirm": "プランを削除しますか？",
+  "PlanRemoveConfirmTitle": "プランを削除しますか？",
+  "PlanRemoveConfirmText": "このプランを編集中の場合でも、編集中の内容を含め、このプランの全てが削除されます。",
   "ReviewRemoveConfirm": "コメントを削除しますか？",
   "ReviewRemoved": "コメントを削除しました。",
   "SelectRating": "評価1～5を選択してください。",
@@ -339,7 +339,6 @@
   "StartEx": "自宅や集合場所など、出発地をセットすると、[出発地] → [ 1つ目のスポット] までの経路が表示されます。",
   "EndEx": "自宅や到着場所など、出発地をセットすると、[最後のスポット] → [到着地] までの経路が表示されます。",
   "LinktoDetail":"詳細を見る",
-  "EditPlanRemoveConfirm": "編集中のプランも削除されます。よろしいですか？",
   "About":"アバウト",
   "Guide":"ガイド",
   "Policy":"プライバシー",
