--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -53,7 +53,6 @@
   "Plan": "Plan",
   "Date": "Date",
   "LastUpdated": "Last updated",
-  "ConfirmPlanDeletion": "Are you sure you want to delete the plan?",
   "PlanDeleted": "The plan has been deleted.",
   "SpotList": "Spot List",
   "PlanList": "Plan List",
@@ -235,7 +234,8 @@
   "SpotStart": "Start",
   "SpotEnd": "End",
   "ReviewSaved": "We have received your review. Please wait for a while until it is approved.",
-  "PlanRemoveConfirm": "Do you want to delete the plan?",
+  "PlanRemoveConfirmTitle": "プランを削除しますか？",
+  "PlanRemoveConfirmText": "このプランを編集中の場合でも、編集中の内容を含め、このプランの全てが削除されます。",
   "ReviewRemoveConfirm": "Do you want to delete the review?",
   "ReviewRemoved": "The review has been deleted.",
   "SelectRating": "Please select a rating of 1-5.",
@@ -339,7 +339,6 @@
   "StartEx": "自宅や集合場所など、出発地をセットすると、[出発地] → [ 1つ目のスポット] までの経路が表示されます。",
   "EndEx": "自宅や到着場所など、出発地をセットすると、[最後のスポット] → [到着地] までの経路が表示されます。",
   "LinktoDetail":"詳細を見る",
-  "EditPlanRemoveConfirm": "編集中のプランも削除されます。よろしいですか？",
   "About":"アバウト",
   "Guide":"ガイド",
   "Policy":"プライバシー",
