--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -241,7 +241,8 @@
   "SelectRating": "Please select a rating of 1-5.",
   "SelectAPhotoReview": "Let's select a photo.",
   "ReleaseConfirm": "Do you want to publish it?",
-  "ReleaseEditConfirm": "新しい編集をみんなに共有しますか？",
+  "ReleaseConfirmText": "公開する場合は、投稿内容にご注意いただき、利用規約の了承の上、公開を行ってください。自分のみが閲覧可能な状態で保存をする場合には、公開先を「自分のみ(非公開)」に変更し直してから保存ボタンを押してください。",
+  "ReleaseButton": "利用規約を了承し、公開を行う",
   "PrivateConfirm": "Do you want to keep it private?",
   "ReleaseSaved": "Release",
   "PrivateSaved": "Archive.",
