--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -242,7 +242,7 @@
   "SelectAPhotoReview": "写真を選択しよう",
   "ReleaseConfirmTitle": "みんなに公開しますか？",
   "ReleaseConfirmText": "公開する場合は、投稿内容にご注意いただき、利用規約の了承の上、公開を行ってください。自分のみが閲覧可能な状態で保存をする場合には、公開先を「自分のみ(非公開)」に変更し直してから保存ボタンを押してください。",
-  "ReleaseButton": "利用規約を了承し、公開を行う",
+  "ReleaseButton": "規約に了承して公開する",
   "PrivateConfirm": "非公開にしますか？",
   "ReleaseSaved": "公開しました",
   "PrivateSaved": "非公開にしました",
