--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -52,7 +52,7 @@
   "Spot": "スポット",
   "Plan": "旅プラン",
   "Date": "日付",
-  "LastUpdated": "最終更新日",
+  "LastUpdated": "更新日",
   "PlanDeleted": "プランを削除しました。",
   "SpotList": "スポット一覧",
   "PlanList": "プラン一覧",
