--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -346,5 +346,6 @@
   "MapDisp": "マップ表示",
   "AutoTips": "出発地から到着地までの最短ルートを計算します。",
   "Thanks": "いいね",
-  "StartEndSpotDeleteConfirm": "出発地と到着地を削除します。よろしいですか？"
+  "StartEndSpotDeleteConfirm": "出発地と到着地を削除します。よろしいですか？",
+  "ReleaseStartEndSpotDeleteConfirmText": "出発地と到着地を削除します。公開する場合は、投稿内容にご注意いただき、利用規約の了承の上、公開を行ってください。自分のみが閲覧可能な状態で保存をする場合には、公開先を「自分のみ(非公開)」に変更し直してから保存ボタンを押してください。"
 }
