--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -70,8 +70,8 @@
   "RecommendedPlan": "同じスポットを含むおすすめプラン",
   "TravelDate": "旅行予定日",
   "UseBus": "バス含む",
-  "Nobus": "バス含む",
-  "Auto": "最短ルート",
+  "NoBus": "バス含まない",
+  "Auto": "最短ルートを計算",
   "EnterPlanName": "保存するプラン名を入力",
   "SpotDeleted": "スポットを削除しました。",
   "StartTime": "出発時間",
