REMOJU-553 中井さん要望　文言修正

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -280,7 +280,7 @@
   "Roundspot": "周遊スポット",
   "Max6spots": "最大６ヶ所",
   "Option": "※オプション",
-  "AddToPlanOnly": "ここだけプランに入れる",
+  "AddToPlanOnly": "ここだけプランに追加",
   "SpotAllClearConfirm": "スポットをすべて削除します。よろしいですか？",
   "SavePlanConfirm": "プランを保存します。よろしいですか？",
   "isEdit":"編集する",
@@ -297,7 +297,7 @@
   "LoginConfirmTitle": "保存にはログインが必要です。",
   "LoginConfirmText": "ログイン画面 又は ユーザー登録画面に移動しますか？",
   "RequiredPlanName": "Please enter the title.",
-  "InplanCount":"プランに入れた人",
+  "InplanCount":"プランに追加した人",
   "ReviewRate":"レビュー評価",
   "AutoSearchConfirmTitle": "最短ルートを検索します。よろしいですか？",
   "AutoSearchConfirmText": "<dl class='route'><dt>出発地</dt><dd>{0}</dd><dt>到着地</dt><dd>{1}</dd></dl>",
@@ -318,7 +318,7 @@
   "SearchSpot": "からヒットしたものを表示しています。",
   "GoogleSearchAny": "Googleで任意のスポットを検索できます。",
   "ReplaceKeyword": "キーワードを入れ替えて検索してください。",
-  "includedPlan": "（これらのスポットもプランに入れることができます。）",
+  "includedPlan": "（これらのスポットもプランに追加することができます。）",
   "UserPlan": "ユーザープラン",
   "Man": "人",
   "NotPostedRemoju": "Remojuではまだ掲載されていないスポットです。Googleから場所を取得しています。",
