--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -31,7 +31,7 @@
   "Hour": "時間",
   "Minute": "分",
   "Count": "件",
-  "AddToPlan": "プランに入れる",
+  "AddToPlan": "プランに追加",
   "PaginationThrough": "～",
   "PaginationOf": "件目 ／ ",
   "PaginationItem": "件",
@@ -126,7 +126,7 @@
   "editCoverImage": "カバー写真を変更",
   "Article": "投稿者のプロフィール",
   "RecommendedPlanwithSpot": "このスポットを含むおすすめプラン",
-  "NumberOfSpots": "含まれるスポット数",
+  "NumberOfSpots": "スポット数",
   "ErrorMsgAddSpot": "1つのプランに追加できるスポット数は最大20スポットです。(出発地・到着地を含む)",
   "SearchByKeyword": "キーワード検索",
   "AreaAndCommitment": "エリア・カテゴリー選択",
@@ -265,8 +265,8 @@
   "CreatePlanComment": "作成中のプランを",
   "Set": "設定",
   "GoogleKeyword": "住所やスポット名を入力してください",
-  "StartSearch": "出発地を設定",
-  "EndSearch": "到着地を設定",
+  "StartSearch": "出発地をセット",
+  "EndSearch": "到着地をセット",
   "MyPlan#Sec1": "みんなのベストな旅を参考に、",
   "MyPlan#Sec2": "あなたのベストな旅を作りましょう。",
   "MyPlan#Sec3": "次は、どこに行きたいですか？",
@@ -280,7 +280,7 @@
   "Roundspot": "周遊スポット",
   "Max6spots": "最大６ヶ所",
   "Option": "※オプション",
-  "AddToPlanOnly": "ここだけプランに入れる",
+  "AddToPlanOnly": "ここだけプランに追加",
   "SpotAllClearConfirm": "スポットを全て削除します。よろしいですか？",
   "SavePlanConfirm": "プランを保存します。よろしいですか？",
   "isEdit": "編集する",
@@ -297,7 +297,7 @@
   "LoginConfirmTitle": "保存にはログインが必要です。",
   "LoginConfirmText": "ログイン画面 又は ユーザー登録画面に移動しますか？",
   "RequiredPlanName": "プラン名を入力してください。",
-  "InplanCount": "プランに入れた人",
+  "InplanCount": "プランに追加した人",
   "ReviewRate": "レビュー",
   "AutoSearchConfirmTitle": "最短ルートを検索します",
   "AutoSearchConfirmText": "<dl class='route'><dt>出発地</dt><dd>{0}</dd><dt>到着地</dt><dd>{1}</dd></dl>",
@@ -318,7 +318,7 @@
   "SearchSpot": "からヒットしたものを表示しています。",
   "GoogleSearchAny": "Googleで任意のスポットを検索できます。",
   "ReplaceKeyword": "キーワードを入れ替えて検索してください。",
-  "includedPlan": "（これらのスポットもプランに入れることができます。）",
+  "includedPlan": "（これらのスポットもプランに追加することができます。）",
   "UserPlan": "ユーザープラン",
   "Man": "人",
   "NotPostedRemoju": "Remojuではまだ掲載されていないスポットです。Googleから場所を取得しています。",
