REMOJU-564 プランスポット一覧高速化お試し

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -43,7 +43,7 @@
   "TimeRequired": "req. time",
   "RemojuRecommended": "Remoju plans",
   "UserSubmissionPlan": "User plans",
-  "FindEveryoneRecommendations": "Find everyone recommendations.",
+  "FindEveryoneRecommendations": "どこへ行く",
   "BackEveryoneRecommendations": "一覧へ戻る",
   "BackEveryoneRecommendationsMyPage": "一覧",
   "EditPlan": "Edit",
