--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -43,7 +43,7 @@
   "TimeRequired": "所要時間",
   "RemojuRecommended": "モデルプラン",
   "UserSubmissionPlan": "みんなのプラン",
-  "FindEveryoneRecommendations": "どこへ行く",
+  "FindEveryoneRecommendations": "どこに行く？",
   "BackEveryoneRecommendations": "一覧へ戻る",
   "BackEveryoneRecommendationsMyPage": "一覧",
   "EditPlan": "編集",
@@ -75,7 +75,7 @@
   "EnterPlanName": "保存するプラン名を入力",
   "SpotDeleted": "スポットを削除しました。",
   "StartTime": "出発時間",
-  "Memo": "フリーメッセージ",
+  "Memo": "メモ書きをしよう",
   "ShareUrl": "共有URL",
   "SavePlan": "プランを保存",
   "OK": "はい",
@@ -225,7 +225,7 @@
   "VideoSizeError": "100MBを超える動画ファイルはアップロードできません。",
   "FreeMemoEx": "みんなに向けたメッセージ",
   "MakeMyPlan": "旅プランを作る",
-  "ArragePlan": "プラン作成画面",
+  "ArragePlan": "プランBOX",
   "SetDeparturePoint": "出発地のセット",
   "SetDestination": "到着地のセット",
   "PointOfDeparture": "出発地",
@@ -306,7 +306,7 @@
   "AgeAnnounced": "年代は公表されます。",
   "SetBirthday": "設定は編集の生年月日で行います。",
   "ImgSelected": "写真を選択する",
-  "TravelBookmark": "プラン名（必須）",
+  "TravelBookmark": "ポイントやサブタイトルを書こう",
   "PasteImg": "プランの表紙写真を選ぼう",
   "PasteImgSpot": "スポットの写真を追加します",
   "NotFound": "お探しのページは見つかりませんでした。",
@@ -337,8 +337,8 @@
   "CopyPlan": "コピー",
   "Reply": "返信",
   "EditCancel": "キャンセル",
-  "StartEx": "自宅や集合場所など、出発地をセットすると、[出発地] → [ 1つ目のスポット] までの経路が表示されます。",
-  "EndEx": "自宅や到着場所など、出発地をセットすると、[最後のスポット] → [到着地] までの経路が表示されます。",
+  "StartEx": "自宅や集合場所など出発地をセットすると、1つ目のスポットまでの経路も表示されます。",
+  "EndEx": "自宅や解散場所など到着地をセットすると、最後のスポットからの経路も表示されます。",
   "LinktoDetail":"詳細を見る",
   "About":"アバウト",
   "Guide":"ガイド",
