--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -47,7 +47,7 @@
   "BackEveryoneRecommendations": "一覧へ戻る",
   "BackEveryoneRecommendationsMyPage": "一覧",
   "EditPlan": "編集",
-  "DeletePlan": "削除する",
+  "DeletePlan": "削除",
   "Application": "公開申請中",
   "Spot": "スポット",
   "Plan": "旅プラン",
@@ -87,7 +87,7 @@
   "Copy": "リンクのコピー",
   "Access": "アクセス",
   "DirectionsFromCurrentLocation": "現在地からの行き方",
-  "SelectPhoto": "プロフィール写真を編集",
+  "SelectPhoto": "プロフィール写真を選択する",
   "DisplayName": "ユーザー名",
   "ErrorMsgRequiredDisplayName": "ユーザー名を入力してください。",
   "Surname": "姓",
@@ -145,7 +145,7 @@
   "SharePlan": "リンク共有",
   "SharePlanSave": "このURLは、みんなに非公開のまま、共有したお友達のみ閲覧できます。",
   "SharePlanNoSave": "このプランをURLで共有するには、編集画面から保存してください。このURLは、みんなに非公開のまま、共有したお友達のみ閲覧できます。",
-  "MyPage": "マイページ",
+  "MyPage": "ページ",
   "year": "年",
   "month": "月",
   "day": "日",
@@ -153,7 +153,7 @@
   "GoogleSpot": "Remojuではまだご紹介していないスポットです。Googleマップから場所を取得しています。",
   "Welcome": "ようこそ",
   "San": "さん",
-  "Sanno": "さんの",
+  "Sanno": "さん",
   "PleaseLogin": "ログインしてください",
   "MakeATripPlan": "旅プランを作成",
   "SearchBySpot": "スポットから探す",
@@ -248,7 +248,7 @@
   "PrivateSaved": "非公開にしました",
   "DuringRouteCalculation": "経路計算中・・・",
   "SpotNameEx": "スポット名",
-  "SpotExplanationEx": "このスポットのポイントや内容を書きましょう（フリーコメント）",
+  "SpotExplanationEx": "このスポットでやりたいことなど忘れずに書いておこう",
   "FavoriteRemoveConfirm": "お気に入りから削除しますか？",
   "FavoriteRemoved": "お気に入りを削除しました。",
   "PlanName": "プラン名の入力（必須）",
@@ -305,7 +305,7 @@
   "Optimized": "最適化済です。",
   "AgeAnnounced": "年代は公表されます。",
   "SetBirthday": "設定は編集の生年月日で行います。",
-  "ImgSelected": "写真を選択する",
+  "ImgSelected": "選択",
   "TravelBookmark": "ポイントやサブタイトルを書こう",
   "PasteImg": "プランの表紙写真を選ぼう",
   "PasteImgSpot": "スポットの写真を追加します",
