REMOJU-567 リリース前テスト１

--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -297,7 +297,7 @@
   "LoginConfirmTitle": "保存にはログインが必要です。",
   "LoginConfirmText": "ログイン画面 又は ユーザー登録画面に移動しますか？",
   "RequiredPlanName": "プラン名を入力してください。",
-  "InplanCount": "プランに追加した人",
+  "InplanCount": "プランに追加された回数",
   "ReviewRate": "レビュー",
   "AutoSearchConfirmTitle": "最短ルートを検索します",
   "AutoSearchConfirmText": "<dl class='route'><dt>出発地</dt><dd>{0}</dd><dt>到着地</dt><dd>{1}</dd></dl>",
@@ -320,7 +320,7 @@
   "ReplaceKeyword": "キーワードを入れ替えて検索してください。",
   "includedPlan": "（これらのスポットもプランに追加することができます。）",
   "UserPlan": "ユーザープラン",
-  "Man": "人",
+  "Man": "回",
   "NotPostedRemoju": "Remojuではまだ掲載されていないスポットです。Googleから場所を取得しています。",
   "PostList": "さんの投稿一覧",
   "ShareLink": "リンク共有",
