--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -351,5 +351,6 @@
   "Roundtime":"周遊時間",
   "ErrorMsgEkitan":"経路　公共手段がありませんでした。",
   "View": "閲覧数",
-  "InPlanBox": "プランBoxに入りました。"
+  "InPlanBox": "プランBoxに入りました。",
+  "Contact":"お問い合わせ"
 }
