getSpotlist comment out,map lline etc

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -205,6 +205,7 @@
   "PlanSave": "プランを保存しました。",
   "NoSpotName": "Not all required fields are filled.Please enter the title.",
   "NoSpot": "スポットはまだありません。",
+  "NoSpot1": "右の一覧から",
   "NoSpot2": "お好きなスポットを追加しよう。",
   "RegisterSpot": "Register spot",
   "NoReview": "There are no reviews yet.",
