--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -204,9 +204,9 @@
   "ShareYourPlanWithOtherUsers": "自分のプランを他のユーザーにも共有しよう",
   "PlanSave": "プランを保存しました。",
   "NoSpotName": "保存にはスポット名が必要です。スポット名を入力してください。",
-  "NoSpot": "旅プランを作ってみませんか？",
+  "NoSpot": "あなたの旅プランが作れます。",
   "NoSpot1": "掲載されたスポットやプランを追加して",
-  "NoSpot2": "あなたの旅プランを作ってみよう！",
+  "NoSpot2": "旅プランを作ってみよう！",
   "RegisterSpot": "スポットを登録",
   "NoReview": "まだコメントがありません。",
   "VisitDate": "訪問日",
