--- a/src/assets/i18n/ja.json
+++ b/src/assets/i18n/ja.json
@@ -83,7 +83,7 @@
   "Save": "保存",
   "AddSpot": "スポットを追加する",
   "BatchClear": "破棄",
-  "ErrorMsgRequiredPlanName": "保存にはプラン名（必須）が必要です。プラン名を入力してください。",
+  "ErrorMsgRequiredPlanName": "保存にはプラン名が必要です。プラン名を入力してください。",
   "Copy": "リンクのコピー",
   "Access": "アクセス",
   "DirectionsFromCurrentLocation": "現在地からの行き方",
@@ -252,7 +252,7 @@
   "SpotExplanationEx": "このスポットでやりたいことなど忘れずに書いておこう",
   "FavoriteRemoveConfirm": "お気に入りから削除しますか？",
   "FavoriteRemoved": "お気に入りを削除しました。",
-  "PlanName": "プラン名の入力（必須）",
+  "PlanName": "プラン名を入力 例) 東京デートプラン...",
   "MyplanSelectPhoto": "写真選択",
   "ReportReview": "コメントを違反報告",
   "ReportReviewConfirmTitle": "不適切なコメントを報告しますか？",
@@ -260,7 +260,7 @@
   "ReportReviewComplete": "ご報告いただきましてありがとうございました。",
   "ReportedReviewComplete": "報告済みです。ありがとうございました。",
   "NewPlanConfirmTitle": "新しいプランを作りますか？",
-  "NewPlanConfirmText": "作成中の内容は削除され、新規プランの作成が始まります。",
+  "NewPlanConfirmText": "作成中の内容は削除され、新規プランの作成を開始します。",
   "ResetPlanConfirm": "最近の変更が失われます。よろしいですか？",
   "EdifPlanComment": "編集中の内容を",
   "CreatePlanComment": "作成中のプランを",
